--- a/watershed.html
+++ b/watershed.html
@@ -376,7 +376,7 @@ function openWin(fileName, windowName,display) {
 					<div class="box">
 
 
-					<h2>EPA Impaired Value (2010)</h2>
+					<h2>EPA Impaired Water (2010)</h2>
 
 <div id="impaired_content" style="width:100%; align: left"></div>
 
