--- a/gageheight.html
+++ b/gageheight.html
@@ -77,7 +77,7 @@ $.blockUI({message: mess, css:{
 			}
            	//legend:{container: $('#labeler'),hideable:true }
         };
-    $.getJSON('http://data.oklahomawatersurvey.org/data/proxy/?url='.concat(encodeURIComponent(url)).concat('&callback=?'),function(fdata){
+    $.getJSON('http://waterservices.usgs.gov/nwis/iv/?format=json&huc=' + qs.huc + '&startDT=' + qs.start + '&endDT=' + qs.end + '&parameterCd=00065&siteType=ST',function(fdata){
 
 	
 	var comb=[];
@@ -172,7 +172,7 @@ var theInput2 = document.getElementById('datepicker2');
 
 
 dateSelect.onsubmit = function(e) {
-    var myurl = "http://data.oklahomawatersurvey.org/dashboard/gageheight.html?huc="+qs.huc+"&start="+ encodeURIComponent(theInput1.value) +"&end="+ encodeURIComponent(theInput2.value) ;
+    var myurl = "gageheight.html?huc="+qs.huc+"&start="+ encodeURIComponent(theInput1.value) +"&end="+ encodeURIComponent(theInput2.value) ;
 window.history.pushState('', "Title", myurl);
 window.location.reload();
     return false;
