--- a/streamflow.html
+++ b/streamflow.html
@@ -47,7 +47,7 @@
 </style>
 
 <script>
-	var qs;
+var qs;
 $(document).ready( function() {
 
 var mess='Loading..'
@@ -90,8 +90,8 @@ $.blockUI({message: mess, css:{
 			}
            	//legend:{container: $('#labeler'),hideable:true }
         };
-    $.getJSON('http://data.oklahomawatersurvey.org/data/proxy/?url='.concat(encodeURIComponent(url)).concat('&callback=?'),function(fdata){
-
+   // $.getJSON('http://data.oklahomawatersurvey.org/data/proxy/?url='.concat(encodeURIComponent(url)).concat('&callback=?'),function(fdata){
+$.getJSON('http://waterservices.usgs.gov/nwis/iv/?format=json&huc=' + qs.huc + '&startDT=' + qs.start + '&endDT=' + qs.end + '&parameterCd=00060&siteType=ST',function(fdata){
 	
 	var comb=[];
         var variable;
@@ -182,7 +182,7 @@ var theInput2 = document.getElementById('datepicker2');
 
 
 dateSelect.onsubmit = function(e) {
-    var myurl = "http://data.oklahomawatersurvey.org/dashboard/streamflow.html?huc="+qs.huc+"&start="+ encodeURIComponent(theInput1.value) +"&end="+ encodeURIComponent(theInput2.value) ;
+    var myurl = "streamflow.html?huc="+qs.huc+"&start="+ encodeURIComponent(theInput1.value) +"&end="+ encodeURIComponent(theInput2.value) ;
 window.history.pushState('', "Title", myurl);
 window.location.reload();
     return false;
