--- a/watershed.html
+++ b/watershed.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
+<base target="_blank">
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 		<title>Oklahoma Water Survey | Dashboard</title>
 		<link rel=stylesheet href="http://worker.oklahomawatersurvey.org/portal/jqui/development-bundle/themes/base/jquery.ui.all.css"
@@ -331,7 +332,7 @@ function openWin(fileName, windowName,display) {
 						<div class="grid_2">
 					<div class="box">
 
-<h2>Streamflow</h2>
+<h2>USGS Streamflow</h2>
 						<table>
 							<tbody>
 								<tr>
@@ -346,7 +347,7 @@ function openWin(fileName, windowName,display) {
 <div class="grid_2">
 					<div class="box">
 
-<h2>Gage Height</h2>
+<h2>USGS Gage Height</h2>
 						<table>
 							<tbody>
 								<tr>
@@ -359,7 +360,7 @@ function openWin(fileName, windowName,display) {
 
 					<div class="box">
 
-<h2>Ground Water Level</h2>
+<h2>USGS Ground Water Level</h2>
 						<table>
 							<tbody>
 								<tr>
